--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -30,6 +30,7 @@ jobs:
 
       - name: Test coverage
         run: |
+          covr::codecov(token = "${{ secrets.CODECOV_TOKEN }}")
           cov <- covr::package_coverage(
             quiet = FALSE,
             clean = FALSE,
