--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -39,7 +39,7 @@ jobs:
           covr::to_cobertura(cov)
         shell: Rscript {0}
 
-      - uses: codecov/codecov-action@v3
+      - uses: codecov/codecov-action@v4
         with:
           fail_ci_if_error: ${{ github.event_name != 'pull_request' && true || false }}
           file: ./cobertura.xml
@@ -60,3 +60,5 @@ jobs:
         with:
           name: coverage-test-failures
           path: ${{ runner.temp }}/package
+          token: ${{ secrets.CODECOV_TOKEN }}
+
