--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Test coverage
         run: |
-          covr::codecov(token = "${{ secrets.CODECOV_TOKEN }}")
+          # covr::codecov(token = "${{ secrets.CODECOV_TOKEN }}")
           cov <- covr::package_coverage(
             quiet = FALSE,
             clean = FALSE,
@@ -43,7 +43,6 @@ jobs:
         # uses: codecov/codecov-action@v4.0.1
         uses: codecov/codecov-action@v4
         with:
-          # token: ${{ secrets.CODECOV_TOKEN }}
           verbose: true
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
