--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -5,6 +5,8 @@
 
 # Workflow derived from https://github.com/r-lib/actions/tree/v2/examples
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
+# Workflow derived from https://github.com/r-lib/actions/tree/v2/examples
+# Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
     branches: [main, master]
@@ -35,7 +37,7 @@ jobs:
 
       - name: Test coverage
         run: |
-          # covr::codecov(token = "${{ secrets.CODECOV_TOKEN }}")
+          covr::codecov(token = "${{ secrets.CODECOV_TOKEN }}")
           cov <- covr::package_coverage(
             quiet = FALSE,
             clean = FALSE,
@@ -45,8 +47,10 @@ jobs:
         shell: Rscript {0}
 
       - name: Upload coverage reports to Codecov
+        # uses: codecov/codecov-action@v4.0.1
         uses: codecov/codecov-action@v4
         with:
+          # token: ${{ secrets.CODECOV_TOKEN }}
           verbose: true
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
